@WIP bugfixes
passing tests:
- `org.prlprg.fir` - FIR unit tests
- `org.prlprg.snapshot.fir2c.FirAfterOpt2CTest#testEval` with `EXAMPLE_FILTER=bench_.*` - benchmark snapshot tests